<resources>
	<string name="hello">Hello World, covoiturage!</string>
	<string name="app_name">Telekocsi</string>
	<string name="paiement">Paiement et évaluation</string>
	<string name="retour">Retour</string>
	<string name="annuler">Annuler</string>
	<string name="nbPointEchange">Nombre de points à échanger :</string>
	<string name="nbPoints">3 points</string>
	<string name="prix">Prix :</string>
	<string name="passager">Du passager :</string>
	<string name="conducteur">Au conducteur :</string>
	<string name="conducteur2">Conducteur</string>
	<string name="depart">Départ :</string>
	<string name="arrivee">Arrivée :</string>
	<string name="le">Le :</string>
	<string name="pour">Pour :</string>
	<string name="place">place</string>
	<string name="placesDispo">Places disponibles :</string>
	<string name="validerTransaction">Valider une transaction</string>
	<string name="avis">Laisser une appréciation :</string>
	<string name="commentaire">Commentaire :</string>
	<string name="rechTrajet">Recherche trajet</string>
	<string name="detailTrajet">Détail du trajet</string>
	<string name="identTrajet">Identification du trajet :</string>
	<string name="heure">Heure :</string>
	<string name="jours">Jours :</string>
	<string name="autoroute">Autoroute :</string>
	<string name="dateTrajet">Date du trajet :</string>
	<string name="rechercher">Rechercher</string>
	<string name="trajetfind">Trajets trouvés</string>
	<string name="resultats">.. résultats</string>
	<string name="page">Page : 1/1</string>
	<string name="newsearch">Nouvelle recherche</string>
	<string name="quit">Quitter</string>
	<string name="tel">Téléphone</string>
    <string name="main_menu_title">Telekocsi</string>
    <string name="occupant_functions">Passager</string>
    <string name="driver_functions">Conducteur</string>
    <string name="route_activation">Activer un trajet</string>
    <string name="route_search">Rechercher un trajet</string>
    <string name="route_modification">Modifier un trajet</string>
    <string name="profile_settings">Mon Profil</string>
    <string name="transaction_validation">Valider une transaction</string>
    <string name="route_creation">Créer un itinéraire</string>
    <string name="disconnection_text">Déconnexion</string>
    <string name="main_menu_text">Menu principal</string>
    <string name="notifications_text">Notifications</string>
    <string name="profile_text">Mon profil</string>
    <string name="preferences_text">Mes préférences</string>
    <string name="routes_text">Mes itinéraires</string>
    <string name="identification">Identification</string>
    <string name="connexion_button">Connexion</string>
    <string name="identification_error_message">Email ou mot de passe invalide</string>
    <string name="password_forgotten">Mot de passe oublié?</string>
    <string name="send_email_button_text">Le recevoir par email</string>
    <string name="registering">Enregistrement (1/3)</string>
    <string name="connection_parameters"> Paramètres de connexion </string>
    <string name="email">Adresse e-mail</string>
    <string name="password1">Mot de passe</string>
   	<string name="password2">Ressaisissez le mot de passe</string>
   	<string name="profile_settings_button_text">Etape 2/3</string>
   	<string name="email_syntaxe_error">Format d\'email non reconnu</string>
   	<string name="email_exist_error">Adresse d\'email existante</string>
   	<string name="passwords_error">Les mots de passe doivent être égaux et non vides</string>
    <string name="registering2">Enregistrement (2/3)</string>
   	<string name="profile">Données personnelles </string>
   	<string name="sex">Sexe</string>
   	<string name="male">Homme</string>
   	<string name="female">Femme</string>
    <string name="name">Nom</string>
   	<string name="first_name">Prénom</string>
   	<string name="phone">Téléphone</string>
   	<string name="day">JJ</string>
   	<string name="month">MM</string>
   	<string name="year">AAAA</string>
   	<string name="date_of_birth">Date de naissance</string>
   	<string name="profile_settings_back_button_text">Retour</string>
   	<string name="preferences_settings_button_text">Etape 3/3</string>
   	<string name="name_syntaxe_error">Nom non renseigné</string>
   	<string name="first_name_syntaxe_error">Prénom non renseigné</string>
   	<string name="jj_syntaxe_error">Jour de naissance invalide</string>
   	<string name="mm_syntaxe_error">Mois de naissance invalide</string>
   	<string name="aaaa_syntaxe_error">Année de naissance invalide</string>
   	<string name="phone_syntaxe_error">Le téléphone doit comporter 10 chiffres</string>
    <string name="registering3">Enregistrement (3/3)</string>
   	<string name="preferences">Préférences</string>
   	<string name="yes">Oui</string>
   	<string name="no">Non</string>
   	<string name="any_difference">Sans importance</string>
    <string name="discussion">Discussion</string>
    <string name="animals">Animaux</string>
    <string name="smoker">Fumeur</string>
    <string name="detours">Détours</string>
    <string name="music">Musique</string>
    <string name="preferences_settings_back_button_text">Retour</string>
    <string name="registering_submit_button_text">Terminer</string>
	<string name="tm_titre_trajetManaging">Vos trajets</string>
	<string name="tm_bt_NewTrajet">Nouveau trajet</string>
	<string name="tm_item_activation">Activer le trajet</string>
    <string name="tm_item_desactivation">Desactiver le trajet</string>
	<string name="tm_item_suppression">Supprimer le trajet</string>
	<string name="tm_item_map">Google Map</string>
	<string name="tm_row_date">Date :</string>
	<string name="tm_row_depart">Départ :</string>
	<string name="tm_row_arrivee">Arrivée :</string>
	<string name="tm_row_place">place(s) dispo</string>
	<string name="tm_row_point">point(s)</string>
    <string name="trajet_identification_title">Identification du trajet</string>
    <string name="trajet_date_title">Date du trajet</string>
    <string name="trajet_negociations_checkbox">Je reste ouvert à toute négociation</string>
    <string name="trajet_my_itineraires_radio_button">Mes itinéraires</string>
    <string name="trajet_new_itineraire_radio_button">Nouveau trajet</string>
    <string name="trajet_back_button">Retour</string>
    <string name="trajet_start_creation">Creer le trajet</string>
    <string name="trajet_creation_title">Créer un trajet</string>
    <string name="trajet_creation_button_after_creation">Voir les passagers trouvés</string>
    <string name="trajet_creation_successed">Création du trajet effectuée</string>
    <string name="route_identification_title">Identification du trajet</string>
    <string name="route_date_title">Date du trajet</string>
    <string name="negociations_checkbox">Je reste ouvert à toute négociation</string>
    <string name="my_routes_radio_button">Mes itinéraires</string>
    <string name="new_route_radio_button">Nouveau trajet</string>
    <string name="back_button">Retour</string>
    <string name="start_route_activation">Activer le trajet</string>
    <string name="start_route_desactivation">Desactiver le trajet</string>
    <string name="route_activation_title">Activer un trajet</string>
    <string name="route_activation_button_after_activation">Voir les passagers trouvés</string>
    <string name="activation_successed">Activation du trajet effectuée</string>
    <string name="route_creation_title">Créer un itinéraire</string>
    <string name="start_route_creation">Enregistrer</string>
    <string name="cancel_route_creation">Annuler</string>
    <string name="non_automatic_route_radio">Non</string>
    <string name="automatic_route_radio">Oui</string>
    <string name="route_creation_type_title">Avec autoroutes</string>
    <string name="route_creation_arrival_time">Horaire de destination</string>
    <string name="route_creation_departure_time">Horaire de départ</string>
    <string name="time_departure_button_text">Sélectionner..</string>
    <string name="time_arrival_button_text">Sélectionner..</string>
    <string name="route_creation_departure">Lieu de départ</string>
    <string name="route_creation_intermedA">1er Lieu intermédiaire (facultatif)</string>
    <string name="route_creation_intermedB">2nd Lieu intermédiaire (facultatif)</string>
    <string name="route_creation_arrival">Lieu de destination</string>
    <string name="route_creation_frequence">Fréquence du trajet</string>
    <string name="route_creation_places_count">Places disponibles</string>
    <string name="route_creation_frequence_button_text">Choisissez la fréquence</string>
    <string name="route_creation_price">Prix (nombre de points)</string>
    <string name="route_creation_comment">Commentaire</string>
    <string name="departure_error">Commentaire</string>
    <string name="arrival_error">Commentaire</string>
    <string name="departure_time_error">Commentaire</string>
    <string name="arrival_time_error">Commentaire</string>
    <string name="frequency_error">Aucune fréquence n\'a été sélectionné</string>
    <string name="price_error">Prix non renseigné ou négatif</string>
    <string name="times_error">L\'heure de départ ne peut être supérieure à l\'heure d\'arrivée</string>
	<string name="routes_managing_title">Gérer mes itinéraires</string>
	<string name="no_route_registered">Vous n\'avez aucun itinéraire</string>
	<string name="routes_managing_delete">Supprimer</string>
	<string name="routes_managing_modify">Modifier</string>
	<string name="create_new_route_button">Créer un itinéraire</string>
	<string name="routes_managing_activate">Activer</string>
	<string name="help_to_context_menu">Rester appuyé sur un itinéraire</string>
	<string name="results_for_driver">Passagers trouvés</string>
	<string name="no_results_for_driver">Aucun passager n\'a été trouvé pour ce trajet</string>
	<string name="mapskey">0Smo2Z3QoD8BZPmpNAoJ2SB6C9RfexOkvSBc8qQ</string>
	<string name="session_service_started">Demarrage de la session telekocsi"</string>
	<string name="session_service_stopped">Arret de la session telekocsi</string>
<string name="profile_creation_ongoing">Mise à jour du profil</string>
<string-array name="places_count_list">
        <item>1</item>
<item>2</item>
<item>3</item>
<item>4</item>
</string-array>
<string-array name="weekday_list">
	<item>Lundi</item>
	<item>Mardi</item>
	<item>Mercredi</item>
	<item>Jeudi</item>
	<item>Vendredi</item>
	<item>Samedi</item>
	<item>Dimanche</item>
</string-array>
<string name="route_creation_failed">Echec de la création du trajet</string>
<string name="route_creation_successed">Itinéraire enregistré</string>
<string name="route_modification_failed">Echec de la création de l\'itinéraire</string>
<string name="route_modification_successed">Itinéraire enregistré</string>
<string name="route_desactivation">Désactiver un trajet</string>
<string name="new_profile_button_text">Nouveau Profil</string>
<string name="activated_route_map_text">Voir trajet actif</string>
<string name="desactivation_successed">Le trajet est maintenant désactivé</string>
<string name="route_activation_button_after_desactivation">Réactiver ce trajet</string>
<string name="loading">Opération en cours ...</string>
    <string name="point">Point</string>
    <string name="transaction_validation_success">Transaction validée</string>
    <string name="transaction_validation_failure">Impossible de valider la transaction</string>
<string name="no_transaction_to_validate">Aucune transaction à valider</string>
    <string name="no_active_route">Vous n\'avez pas de trajet actif</string>
    <string name="deletion_seccessful">Suppression effectuée</string>
</resources>