<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>

	<!-- Header -->
	<LinearLayout
	android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/entete"
    android:padding="5px"
    >
    	<ImageView
    	android:src="@drawable/man"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:paddingRight="5px"
    	/>
    	<TextView
    	android:layout_width="wrap_content"
    	android:layout_height="fill_parent"
    	android:color="@color/txtEntete"
    	android:text="@string/registering2"
    	android:textSize="20px"
    	android:textStyle="bold"
    	android:gravity="center_vertical"
    	/>
    </LinearLayout>
    
    <!-- Main -->
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5px"
    android:background="@color/fond"
    >
    	<!-- Profile title -->
    	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingBottom="5px"
    	android:gravity="center"
    	>
    		<ImageView
    		android:src="@drawable/profile"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:paddingRight="5px"
    		/>
    		<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:gravity="center_vertical"
    		android:textColor="@color/h1_color"
    		android:background="@color/h1_background"
    		android:text="@string/profile" 
    		android:textStyle="bold"
    
    		/>
    		<ImageView
    		android:src="@drawable/profile"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:paddingLeft="5px"
    		/>
    	</LinearLayout>
    	
    	<!-- Scroll bar -->
    	<ScrollView
    	android:layout_width="fill_parent"
    	android:layout_height="280px"
    	>
    		<!-- Child of the scroll bar -->
    		<LinearLayout
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		>
    	
		    	<!-- Sex -->
	    		<TextView
	    		android:id="@+id/labelsex"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textColor="@color/h2_color"
	    		android:text="@string/sex"
	    		/>
	   			<RadioGroup
	   			android:id="@+id/respsex"
	   			android:orientation="horizontal"
				android:layout_width="fill_parent"
	   			android:layout_height="wrap_content"
	   			android:checkedButton="@+id/sex_male"
	   			>
	   				<RadioButton
	   				android:layout_width="wrap_content"
	   				android:layout_height="wrap_content"
	   				android:text="@string/male"
	   				android:id="@+id/sex_male"
	   				/>
		  	 		<RadioButton 
	   				android:layout_width="wrap_content"
	   				android:layout_height="wrap_content"
	   				android:text="@string/female"
	   				/>
				</RadioGroup>
	    	
	    		<!-- Name -->
	    		<TextView
	    		android:id="@+id/labelname"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textColor="@color/h2_color"
	    		android:text="@string/name"
	    		/>
	    		<EditText
	    		android:id="@+id/respname"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:inputType="textPersonName"
	    		/>
	
	    		<!-- First name -->
	    		<TextView
	    		android:id="@+id/labelfirstname"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textColor="@color/h2_color"
	    		android:text="@string/first_name"
	    		/>
	    		<EditText
	    		android:id="@+id/respfirstname"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:inputType="textPersonName"
	    		/>
	
	    		<!-- Date of birth -->
	    		<TextView
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textColor="@color/h2_color"
	   			android:text="@string/date_of_birth"
	    		/>
	    		<LinearLayout
	    		android:orientation="horizontal"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		>
	    			<!-- Day -->
	    			<TextView
	    			android:id="@+id/labelday"
	    			android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:text="@string/day"
	    			android:textColor="@color/simple_text_color"
	    			/>
	    			<EditText
	    			android:id="@+id/respday"
	    			android:layout_width="40px"
	    			android:layout_height="wrap_content"
	    			/>
	    			<!-- Month -->
	    			<TextView
	    			android:id="@+id/lanelmonth"
	    			android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:text="@string/month"
	    			android:textColor="@color/simple_text_color"
	    			/>
	    			<EditText
	    			android:id="@+id/respmonth"
	    			android:layout_width="40px"
	    			android:layout_height="wrap_content"
	    			/>
	    			<!-- Year -->
	    			<TextView
	    			android:id="@+id/labelyear"
	    			android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:text="@string/year"
	    			android:textColor="@color/simple_text_color"
	    			/>
	    			<EditText
	    			android:id="@+id/respyear"
	    			android:layout_width="80px"
	    			android:layout_height="wrap_content"
	    			/>
	    		</LinearLayout>
	    
	    		<!-- Telephone -->
	    		<TextView
	    		android:id="@+id/labelphone"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textColor="@color/h2_color"
	    		android:text="@string/phone"
	    		/>
	    		<EditText
	    		android:id="@+id/respphone"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		/>
    		</LinearLayout>
   		 </ScrollView>
   	 </LinearLayout>
   	 
    
    <!-- Footer -->
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/panelAction"
    android:padding="5px"
    >
    	<Button
    	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
    	android:text="@string/profile_settings_back_button_text"
    	android:id="@+id/profile_settings_back_button"
    	/>
    	<Button
    	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
    	android:text="@string/preferences_settings_button_text"
    	android:id="@+id/preferences_settings_button"
    	/>
    </LinearLayout>
 
</LinearLayout>

