<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
	<!-- Header -->
	<LinearLayout
	android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/entete"
    android:padding="5px"
    >
    	<ImageView
    	android:src="@drawable/man"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:paddingRight="5px"
    	/>
    	<TextView
    	android:layout_width="wrap_content"
    	android:layout_height="fill_parent"
    	android:color="@color/txtEntete"
    	android:text="@string/identification"
    	android:textSize="20px"
    	android:textStyle="bold"
    	android:gravity="center_vertical"
    	/>
    </LinearLayout>
    
    <!-- Main -->
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5px"
    android:background="@color/fond"
    >
    	<!-- Connection parameters title -->
    	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingBottom="5px"
    	>
    		
    		
    	</LinearLayout>

    	<!-- E-mail -->
    	<TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textColor="@color/h2_color"
    	android:text="@string/email"
    	/>
    	<EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/identification_email"
    	android:textColor="@color/black"
    	android:inputType="textEmailAddress"
    	/>

    	<!-- Password -->
    	<TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textColor="@color/h2_color"
    	android:text="@string/password1"
    	/>
    	<EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/identification_password"
    	android:textColor="@color/black"
    	android:inputType="textPassword"
    	/>
    	
    	<LinearLayout
    	android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
			<TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/h2_color"
	    	android:text="@string/password_forgotten"
	    	/>
			<Button
	    	android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	    	android:text="@string/send_email_button_text"
	    	android:id="@+id/send_email_button"
	    	/>
		
		</LinearLayout>
    	
    	<TextView
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textColor="@color/fond"
    	android:text="@string/identification_error_message"
    	android:id="@+id/identification_error"
    	android:gravity="center"
    	android:layout_marginTop="10px"
    	android:layout_marginBottom="10px"
    	/>
    	
    </LinearLayout>
    
    <!-- Footer -->
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/panelAction"
    android:padding="5px"
    >
    	<Button
    	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
    	android:text="@string/connexion_button"
    	android:id="@+id/identification_button"
    	/>
    	<Button
    	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
    	android:text="@string/new_profile_button_text"
    	android:id="@+id/new_profile_button"
    	/>
    </LinearLayout>
</LinearLayout>
