<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
	<!-- Header -->
	<LinearLayout
	android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/entete"
    android:padding="5px"
    >
    	<ImageView
    	android:src="@drawable/android"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:paddingRight="5px"
    	/>
    	<TextView
    	android:layout_width="wrap_content"
    	android:layout_height="fill_parent"
    	android:color="@color/txtEntete"
    	android:text="@string/registering"
    	android:textSize="20px"
    	android:textStyle="bold"
    	android:gravity="center_vertical"
    	/>
    </LinearLayout>
    
    <!-- Main -->
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5px"
    android:background="@color/fond"
    >
    	<!-- Connection parameters title -->
    	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingBottom="5px"
    	>
    		<ImageView
    		android:src="@drawable/connection_parameters"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:paddingRight="5px"
    		/>
    		<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:gravity="center_vertical"
    		android:text="@string/connection_parameters"
    		android:textColor="@color/h1_color"
    		android:background="@color/h1_background"
    		android:textStyle="bold"
    		/>
    	</LinearLayout>

    	<!-- E-mail -->
    	<TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textColor="@color/h2_color"
    	android:text="@string/email"
    	/>
    	<EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	/>

    	<!-- Password1 -->
    	<TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textColor="@color/h2_color"
    	android:text="@string/password1"
    	/>
    	<EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	/>

    	<!-- Password2 -->
    	<TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textColor="@color/h2_color"
    	android:text="@string/password2"
    	/>
    	<EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	/>
    </LinearLayout>
    
    <!-- Footer -->
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/panelAction"
    android:padding="5px"
    >
    	<Button
    	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
    	android:text="@string/profile_settings_button_text"
    	android:id="@+id/profile_settings_button"
    	/>
    </LinearLayout>
</LinearLayout>
